
2020-06-10  Simon Sobisch <simonsobisch@gnu.org>

	Bug #635 added checks for duplicate USING BY REFERENCE items
	* parser.y (emit_entry), typeck.c (cb_emit_call): collect BY REFERENCE
	  items and check for duplicates

2020-06-09  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (call_system, output_return): new functions extracted from
	  different places to have the nearly identical calls to system and the
	  code handling verbosity and exit codes in one place
	* cobc.c (call_system): don't raise SIGINT/SIGQUIT because of sub-process
	* cobc.c (get_signal_name): copied from libcob/common.c

2020-05-26  Ron Norman <rjn@inglenet.com>

	* codegen.c (output_local_field_cache): use output_emit_field
	  for REPORT field

2020-05-15  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y: TYPEDEF is allowed with level 77
	* field.c: attributes of OCCURS copied in TYPE TO entries

2020-05-11  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, field.c, tree.h, config.def, reserved.c, cobc.h:
	  FR #193 implementation of TYPEDEF, TYPE TO and USAGE type-name,
	  fixed some issues with SAME AS
	* tree.c (cb_ref_internal): limit scope of some variables

2020-05-10  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c, config.c, pplex.l, scanner.l: silenced char-subscript warnings
	  by casts to unsigned char

2020-04-28  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_file_initialization): don't output key offset
	  if it is part of a component; even if this has only a single part
	  as components are not part of the record "KEYNAM = RECORD-FIELD"

2020-04-23  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y: added ACCEPT with CURSOR parsing

2020-04-03  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c, tree.h: new field attribute flag_internal_register
	* config.def, field.c, typeck.c: experimental numeric-pointer option
	  (cb_numeric_pointer) to handle ACU's special POINTER handling

2020-04-01  Simon Sobisch <simonsobisch@gnu.org>
