@@ -2101,6 +2101,64 @@ badprog.cob:12: error: elementary item expected
 AT_CLEANUP
 
 
+AT_SETUP([LIKE clause])
+AT_KEYWORDS([definition EXTERNAL GLOBAL])
+
+# work in progress
+AT_XFAIL_IF(true)
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       DATA             DIVISION.
+       WORKING-STORAGE  SECTION.
+       01  MESSAGE-TEXT-2 EXTERNAL.
+         02 AUSGABE-FILE-NAME     PIC X(50).
+         02 FILLER REDEFINES AUSGABE-FILE-NAME.
+             05 FILLER PIC 9999.
+         02 AUSGABE-FILE-NAME-2.
+             05 FILLER PIC 9999.
+             05 DETAIL-NO PIC 9999.
+         02 FILLER LIKE AUSGABE-FILE-NAME.
+      
+       77 OUTPUT-VAL     LIKE DETAIL-NO GLOBAL.
+       77 OUTPUT-VAL-P1  LIKE DETAIL-NO (+1).
+       77 OUTPUT-VAL-P1b LIKE DETAIL-NO (1).
+       77 OUTPUT-VAL-M2  LIKE DETAIL-NO (-2).
+
+       01 Z-MESSAGE-T2 LIKE AUSGABE-FILE-NAME-2.
+       01 Z-MESSAGE-T3.
+          49 MT3      LIKE MESSAGE-TEXT-2.
+
+       PROCEDURE DIVISION.
+           DISPLAY AUSGABE-FILE-NAME OF MESSAGE-TEXT-2
+           DISPLAY Z-MESSAGE-T2 (55:LENGTH OF DETAIL-NO)
+           DISPLAY MT3 (1:LENGTH OF AUSGABE-FILE-NAME)
+           ADD OUTPUT-VAL TO DETAIL-NO
+           GOBACK.
+])
+
+# TODO add tests and syntax checks in cobc
+# AT_DATA([badprog.cob], [
+#        IDENTIFICATION   DIVISION.
+#        PROGRAM-ID.      prog.
+#        DATA             DIVISION.
+#        WORKING-STORAGE  SECTION.
+# 
+# ])
+
+AT_CHECK([$COMPILE_ONLY prog.cob], [0], [], [])
+AT_CHECK([$COMPILE_ONLY -std=mf-strict prog.cob], [1], [],
+[prog.cob:13: error: SAME AS clause does not conform to Micro Focus COBOL
+prog.cob:15: error: SAME AS clause does not conform to Micro Focus COBOL
+prog.cob:17: error: SAME AS clause does not conform to Micro Focus COBOL
+prog.cob:19: error: SAME AS clause does not conform to Micro Focus COBOL
+prog.cob:20: error: SAME AS clause does not conform to Micro Focus COBOL
+])
+
+AT_CLEANUP
+
+
 AT_SETUP([APPLY COMMIT clause])
 AT_KEYWORDS([definition I-O-CONTROL ROLLBACK])
 
