@@ -5,6 +5,11 @@
 	* parser.y (emit_entry), typeck.c (cb_emit_call): collect BY REFERENCE
 	  items and check for duplicates
 
+	FR #193 work on TYPE TO / SAME AS, LIKE
+	* field.c (copy_into_field), tree.h: split out to static functions;
+	  include specified VALUE clause from definition
+	* parser.y, reserved.c, tree.h: added parsing for LIKE clause as pending
+
 2020-06-09  Simon Sobisch <simonsobisch@gnu.org>
 
 	* cobc.c (call_system, output_return): new functions extracted from
